--- a/HappyTech/HappyTech.csproj
+++ b/HappyTech/HappyTech.csproj
@@ -46,6 +46,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddEditCandidateUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AddEditCandidateUserControl.Designer.cs">
+      <DependentUpon>AddEditCandidateUserControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DashboardUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="DashboardUserControl.Designer.cs">
+      <DependentUpon>DashboardUserControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EditTemplatesUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="EditTemplatesUserControl.Designer.cs">
+      <DependentUpon>EditTemplatesUserControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="FeedbackApplicationForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +72,27 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SendAllFeedbackUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="SendAllFeedbackUserControl.Designer.cs">
+      <DependentUpon>SendAllFeedbackUserControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ViewAllCandidatesUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ViewAllCandidatesUserControl.Designer.cs">
+      <DependentUpon>ViewAllCandidatesUserControl.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="AddEditCandidateUserControl.resx">
+      <DependentUpon>AddEditCandidateUserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DashboardUserControl.resx">
+      <DependentUpon>DashboardUserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditTemplatesUserControl.resx">
+      <DependentUpon>EditTemplatesUserControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FeedbackApplicationForm.resx">
       <DependentUpon>FeedbackApplicationForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -65,7 +104,14 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SendAllFeedbackUserControl.resx">
+      <DependentUpon>SendAllFeedbackUserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViewAllCandidatesUserControl.resx">
+      <DependentUpon>ViewAllCandidatesUserControl.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -78,6 +124,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Logo.emf" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
