Adding to Database implemented

--- a/HappyTech/HappyTech.csproj
+++ b/HappyTech/HappyTech.csproj
@@ -67,6 +67,7 @@
     <Compile Include="AddEditCandidateUserControl.Designer.cs">
       <DependentUpon>AddEditCandidateUserControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Constants.cs" />
     <Compile Include="DashboardUserControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
