--- a/HappyTech/App.config
+++ b/HappyTech/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="HappyTech.Properties.Settings.CandidateFeedbackConnectionString"
-            connectionString="Data Source=(localdb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\CandidateFeedbackDB.mdf;Integrated Security=True"
+            connectionString="Data Source=(localdb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\CandidateFeedbackDB.mdf;Integrated Security=True;User Instance=False"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
